--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,204 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+$accent-color: #F08330;
+$main-bg-color: #A4A19F;
+$secondary-bg-color: #2b2b2b;
+$tertiary-bg-color: #373737;
+$main-font-color: #d8d6d4;
+$main-border-color: #000;
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+title {
+  display: none;
+}
+body {
+  font-family: 'Ubuntu', 'Roboto', 'Raleway', sans-serif;
+  color: #212121;
+  background-color: $main-bg-color;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 40px;
+}
+
+.header {
+  background-color: whitesmoke;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 20px;
+  box-shadow: 0px 6px 8px -3px rgba(0, 0, 0, 0.31);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+.search-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 185px;
+  width: 80%;
+
+  &__input {
+    font-family: 'Ubuntu';
+    font-size: 16px;
+    background: #D1CDCA;
+    border: none;
+    border-radius: 20px;
+    padding: 20px 49px 20px 22px;
+    height: 20px;
+    display: block;
+    color: #000;
+    max-width: 400px;
+    width: 100%;
+    transition: outline 0.55s;
+    outline: 1px solid #212121;
+
+    &:focus {
+      transition: outline 0.25s;
+      outline: $accent-color solid 2px;
+    }
+
+    &:hover {
+      transition: outline 0.25s;
+      outline: $accent-color solid 2px;
+    }
+  }
+
+  &__button {
+    width: 31px;
+    height: 31px;
+    min-width: 31px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    transition: outline 0.55s, background-color 0.55s;
+    display: flex;
+    position: relative;
+    right: 36px;
+    outline: none;
+
+    &__icon {
+      fill: #60676a;
+      transition: fill 0.55s;
+    }
+    &:hover {
+      transition: outline 0.55s, background-color 0.55s;
+      background-color: $accent-color;
+    }
+    &:hover .search-form__icon {
+      fill: $main-font-color;
+      transition: fill 0.55s;
+    }
+    &:focus {
+      transition: background-color 0.55s;
+      background-color: $accent-color;
+    }
+    &:focus .search-form__icon {
+      fill: $main-font-color;
+      transition: fill 0.55s;
+    }
+    &:placeholder-shown + &__icon {
+      cursor: auto;
+    }
+  }
+
+  &__icon {
+    fill: #60676a;
+    transition: fill 0.55s;
+  }
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px 0 40px 0;
+  gap: 30px;
+  justify-content: center;
+
+  &__item {
+    display: block;
+    position: relative;
+    box-shadow: 0px 5px 6px -1px rgba(0, 0, 0, 0.6);
+    -webkit-box-shadow: 0px 5px 6px -1px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 5px 6px -1px rgba(0, 0, 0, 0.6);
+    width: 400px;
+    height: 300px;
+    overflow: hidden;
+    transition: transform 0.25s ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+    &:focus {
+      transform: scale(1.1);
+      outline: $accent-color 1px solid;
+    }
+  }
+
+  &__figure {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s;
+    &:hover {
+      transition: transform 7s cubic-bezier(0.25, 0.1, 0.25, 1);
+      transform: scale3d(1.1, 1.1, 1.1);
+    }
+  }
+
+  &__figcaption {
+    width: 100%;
+    color: $main-font-color;
+    background-color: #00000080;
+    padding: 10px;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    line-height: 18px;
+  }
+  &__caption {
+    font-family: roboto;
+    font-size: 19px;
+    font-weight: 300;
+    line-height: 20px;
+  }
+}
+
+.load-more {
+  display: none;
+  width: 200px;
+  height: 40px;
+  cursor: pointer;
+  background-color: $main-bg-color;
+  border: none;
+  margin: auto;
+  font-family: Roboto;
+  font-size: 38px;
+  transition: outline 0.25s, color 0.15s, scale 0.55s;
+  &:hover {
+    transition: outline 0.25s, color 0.15s, scale 0.55s;
+    scale: 1.05;
+  }
+  &:focus {
+    transition: outline 0.25s, color 0.15s, scale 0.55s;
+  
+    color: $accent-color;
+    scale: 1;
+  }
+}
